Fix locales on Ubuntu 14.04
The unittests use pt_BR and pt_BR.UTF8 but Ubuntu14 (where the travis
tests run) do not know about those locales.  Install the Portuguese
language pack for UTF8 support and use locale-gen pt_BR to generate the
latin-1 version of the locale.  This allows the unittests to run and
give predictable output.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,22 @@ python:
  - "3.5"
  - "3.6"
  - "3.7"
+
 install: python setup.py develop
 script: ./runtests.sh
+
 notifications:
     irc:
         - "irc.freenode.net#threebean"
     on_success: never
     on_failure: always
+
+# Install the portuguese language pack so that locale.getpreferredencoding() will use utf8.
+addons:
+  apt:
+    packages:
+    - language-pack-pt
+
+# Also generate the pt_BR locale for latin-1 encoding
+before_install:
+  - 'sudo locale-gen pt_BR'
